[tool.poetry]
name = "hello_django"
version = "0.1.0"
description = "First Django assessment app."
authors = ["Jackson Nathaniel Detke <jndetke2150@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
